# learning_django

./: .gitignore  README.md  db.sqlite3  pyproject.toml  server.py
.history/: README_20241117015358.md  example_20241105220813.py  example_20241105221619.py  example_20241105222828.py
.history/catalog/: urls_20241117011639.py
.history/game_service/: settings_20241116213721.py  settings_20241116215316.py  settings_20241116221125.py  settings_20241116232110.py  settings_20241116232727.py  settings_20241116232751.py  settings_20241117004154.py  settings_20241117011747.py  settings_20241117012529.py  urls_20241117005847.py  urls_20241117010038.py  urls_20241117010210.py  urls_20241117010806.py  urls_20241117011154.py
.history/games/: admin_20241116225625.py  admin_20241117000142.py  forms_20241117000357.py  models_20241116225623.py  models_20241116230152.py  models_20241116230343.py  models_20241117000023.py  urls_20241117011435.py  views_20241117011448.py
.history/hexlet-flask-example/: Makefile_20241105230457  Makefile_20241105232019  Makefile_20241105232341  (+25 more)
GameWebService/: manage.py
catalog/: models.py  serializers.py  urls.py  views.py
game_service/: settings.py  urls.py
game_web_service/: .env  asgi.py  settings.py  urls.py  views.py
games/: models.py  serializers.py  urls.py  views.py
hexlet-flask-example/: .gitignore  Makefile  README.md  main.py  requirements.txt  users_list.json
news/: serializers.py  urls.py  views.py
templates/: base_generic.html  home.html
users/: admin.py  forms.py  serializers.py  urls.py  views.py
(+100 files in other folders)
